# StudentSystem

./: BackGround.qrc  CMakeLists.txt  README.md  add_information.cpp  add_information.h  add_information.ui  delete_information.cpp  delete_information.h  delete_information.ui  find_information.cpp  find_information.h  find_information.ui  linklist.cpp  linklist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  play_04.pro  rankinglist.cpp  rankinglist.h  rankinglist.ui  register.cpp  register.h  register.ui  student_login.cpp  student_login.h  student_login.ui  studentinformation.cpp  studentinformation.h  studentinformation.ui  studentlist.cpp  studentlist.h  update_information.cpp  update_information.h  update_information.ui
